# pwd-gen-package

./: .gitignore  README.md  pyproject.toml
src/password_gen_cli/: cli.py  core.py
