[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "password-cli-package"
version = "0.1.0"
description = "Command line password generator.
authors = [
    { name = "MF", email = "" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    
]

[project.scripts]
password-gen = "password_gen_cli.cli:main"